--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ libtool
 *.o
 *~
 src/libsecp256k1-config.h.in
-src/ecmult_static_context.h
+# src/ecmult_static_context.h
 build-aux/config.guess
 build-aux/config.sub
 build-aux/depcomp
